JSPWIKI-120: propagate WikiContext#getEngine() now returns Engine instead of WikiEngine (10)